    _= operator optimized
    :* operator returns null for non-negative repeat counts

- all the bell-compliant objects:
    fixed potential crash when reloading a file or re-opening the text editor
    "expr" and "lambda" message processing is now deferred, not deferlow-ed unless at object instantiation

- bach.reg, bach.value, bach.pv
    Fixed memory leak related to the text editor window

- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"
        New "importsubdivisions" message attribute
    exportmidi: new "exportbarlines" message attribute
        new "exportdivisions" message attribute

- bach.shelf: fixed crash with @embed 1 when reopening patch

- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note






v0.8.1b

Scroll down for very important things you should now about v0.8b

**********************
*** VERY IMPORTANT ***
**********************

- bach has switched to square brackets [] instead of parens ().
  	THIS WILL NOT BREAK BACKWARD COMPATIBILITY and you can still continue using () if you liked them.
  	However we had good reasons for pushing forward this change. Look at the "what's new" tab in the bach overview.


*****************
*** IMPORTANT ***
*****************

*** THESE CHANGES MIGHT BREAK COMPATIBILITY WITH OLDER PATCHES ***

- bach.roll, bach.score
        The @highlightplay attribute is now by default 0
            Turn it on if you needed it!
		There's a new @applyslope attribute, by default set to 1, 
			that applies range slopes in function slots automatically
			to function segments or curves, to account for slot range slope
			Your patches might then sound different than previously!
			if you did NOT want this, simply set @applyslope to 0.