@@ -38,6 +38,9 @@ authorization: now the code for a given year can be entered until January of the
 - bach.reg, bach.value, bach.pv
     Fixed memory leak related to the text editor window
 
+- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
+    XML import and export: three-quarters-sharp and -flat accidentals have correct name now (was "three-quarter")
+
 - bach.roll:
     MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
         New "importdivisions" message attribute, overriding "markdivisions"
@@ -47,7 +50,6 @@ authorization: now the code for a given year can be entered until January of the
 
 - bach.shelf: fixed crash with @embed 1 when reopening patch
 
-- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
 
 
 
